@@ -4,6 +4,7 @@ meecast (0.6.1) unstable; urgency=low
   * Fixed problem with "Daily" and "15 minutes" updatings
   * Fixed problem wuith splash's setting
   * Added Contextkit for Billboard compatibility 
+  * Added item "12 hours" to Update period list
 
  -- Vlad Vasiliev <vlad@gas.by>  Sat, 28 Jul 2012 00:42:23 +0200
 
